app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
*/
@import "codemirror";

@import "bootstrap-sprockets";

* {
  box-sizing: border-box;
}

html {
  font-family: monospace, serif, sans-serif;
}

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
}

main {
  position: relative;
  min-height: 100%;
  background-image: url('memphis-colorful.png');
}

.container {
  margin: 0 auto;
}

// ------ Navbar styling below ------
.userinfo {
  text-align: right;
}

a.navbar-brand img {
  width: 150px;
  height: auto;
}

.navbar-brand {
  padding: 0;
}

.navbar {
  font-size: 1.25rem;
}

.navbar-nav.mr-auto {
  margin: 0 2rem;
  text-align: center;
}

.nav-item {
  margin-left: 3rem;
}

#avatar {
  margin: 0 auto;
}

.navbar-toggler {
  width: 50px;
  height: 50px;
}

.rounded-circle img {
  height: 40px;
  width: 40px;
  border: 1px solid #1495d5;
}

#dropdownMenu2 {
  background-color: white;
  width: 50px;
}

.dropdown-menu.show {
  padding: 20px;
}

.navbar-nav .dropdown-menu {
  position: absolute !important;
}

.form-inline {
  float: right;
}

.btn.btn-outline-success {
  font-size: 1.25rem;
  margin: 0 2rem;
  background-color: white;
  color: #1495d5;
  border-color: #1495d5;
}

.btn.btn-outline-success:hover, .btn.btn-outline-success:focus, .btn.btn-outline-success:active, .btn.btn-outline-success.active, .open>.dropdown-toggle.btn.btn-outline-success {
  color: white;
  background-color: #1495d5;
  border-color: #1495d5; /*set the color you want here*/
}


// ------ Homepage styling below ------
.banner,
.sign-up-form,
.log-in-form, {
  text-align: center;
  position: relative;
  margin: 0 auto;
}

.carousel-inner {
  position: relative;
}

.carousel-item {
  position: relative;
}

.carousel-caption {
  position: absolute;
  bottom: 10%;
  font-size: 3rem;
  position: absolute;
  bottom: 10%;
  font-size: 3rem;
  right: 15%;
  left: 15%;
  background: rgba(255, 255, 255, 0.6);
  padding-bottom: 15px;
}

.carousel-caption h3, .carousel-caption p {
  color: black;
  font-weight: bold;
}

.carousel-item img {
  margin: 0 auto;
  max-width: 1800px;
  max-height: 900px;
}

.signupnow {
  color: white;
  background-color: #1495d5;
  border-color: #1495d5;
  font-size: 1.5rem;
  font-weight: bold;
  padding: 5px;
  margin-top: 10px;
}

.signupnow:hover {
  color: #1495d5;
  background-color: white;
  border-color: #1495d5;
}

.homepage-intro {
  margin: 50px 0;
}

.homepage-intro h2 {
  font-weight: bold;
}

.row {
   margin: 3%;
   padding: 3% 0;
 }

.row.home {
   box-shadow: 10px 10px 10px #d4d4d8;
   background-color: white;
}

.col-md-6 {
  margin: 0 auto;
}

.col-md-6.left.image, .col-md-6.right.image, .col-md-6.left.text, .col-md-6.right.text {
  display: inline-block;
  position: relative;
}

.col-md-6.left.image img, .col-md-6.right.image img {
  width: 80%;
  height: auto;
  top: 0;
  left: 0;
}

.homepage-end {
  padding-bottom: 100px;
}


// ------ Menu styling below -----
.menu-page-title {
  text-align: center;
}

.card {
  background: rgba(255, 255, 255, 0);
  border: none;
}

.card-img {
  margin: 0 auto;
  max-width: 1500px;
  height: 800px;
  position: relative;
}

.card-img-overlay {
  position: relative;
}

.menu-intro-caption {
  position: absolute;
  bottom: 10%;
  font-size: 3rem;
  right: 15%;
  left: 15%;
  background: rgba(255, 255, 255, 0.8);
  padding-bottom: 15px;
}

h1 .card-title {
  font-weight: bold;
}
h2 .card-text {
  font-weight: bold;
}

.col.menu {
  margin-bottom: 5%;
}

.card-img-top {
  height: 200px;
}

.languages-cards {
  width: 20rem;
}

.card-title {
  margin-top: 2rem;
  text-align: center;
}

.card-body {
  opacity: 0;
  position: absolute;
  width: 15rem;
  text-align: center;
  font-size: 1.75rem;
}

.card-image {
  width: 15rem;
}


// ------ Languages page styling below ------
.languages, .accordion, .sub-accordion {
  text-align: center;
}

.languages-tagline {
  margin-top: 25px;
}

.languages-tagline h2 {
  font-weight: bold;
}

@import url('https://fonts.googleapis.com/css?family=Pacifico|Open+Sans:300,400,600');

.accordion {
    box-sizing: border-box;
    font-weight: 900;
    width: 60%;
    margin: 0 auto;
}

.gurjant a {
    text-decoration: none;
    background-color: #1495d5;
    color: white;
    cursor: pointer;
    padding: 5px;
    width: 60%;
    border-width: thick;
    border-color: #1495d5;
    outline: none;
    transition: 0.4s;
    font-weight: bold;
}

.gurjant p {
    font-size:1em;
    margin: 1em 0;
    text-align: left;
}

.gurjant ul {
    list-style: none;
    padding: 0;

    .inner {
        width: 80%;
        margin: 0 auto;
        overflow: hidden;
        display: none;
    }

    .sub-accordion.active a.toggle.title {
      background: #1495d5;
      color: white;
    }

    .inner.content.show {
      background-color: white;
      border: 2px solid #1495d5;
      padding: 25px;
      margin-top: 7px;
    }

    .inner.show li a.toggle.subtitle {
      background: #1495d5;
      color: white;
    }

  li {
        margin: .5em 0;

        a.toggle {
            width: 100%;
            display: block;
            background: white;
            color: #1495d5;
            padding: 1.5rem;
            border-radius: 0.15em;
            border: 5px solid #1495d5;
            transition: background .3s ease;
        }

        a.toggle.title {
          font-size: 2rem;
        }

        a.toggle.sub-title {
          font-size: 1.25rem;
        }

        a.show, a:hover {
                background: #1495d5;
                color: white;
        }
      }
}


// ------ Log in and Sign up form styling below ------
.log-in-form, .sign-up-form {
  font-size: 1.5rem;
}

.github-button {
  padding: 10px;
}


// ------ Steps terminal and console panel stying below ------
.chapter-title {
  text-align: center;
  margin: 25px 10% 0 10%;
}

.chapter-title h2 {
  font-weight: bold;
}

#steps-left-panel, #steps-right-panel {
  box-shadow: 10px 10px 10px #d4d4d8;
  background-color: white;
}

#submitcode {
  border: 2px solid #1494d5;
  padding: 3%;
}

.test-code, .submit-code {
  margin: 25px 0;
}

.row.test-code, .row.submit-code {
  margin: 0;
  padding: 0;
}

.row.steps-panel {
  padding: 0;
}

.test-code p, .submit-code p {
  float: left;
  margin-bottom: 0;
}

.test-code-button, .submit-code-button {
  float: right;
}

#result {
  border: 2px solid #1495d5;
  height: 100px;
  padding: 1%;
}

.CodeMirror-scroll {
  background-color: #e0e0e5;
}

.CodeMirror.cim-s-default {
  margin-bottom: 25px;
}

#steps-box {
  padding: 3%;
  height: 98%;
}
.steps h3 {
  font-weight: bold;
}

.row.steps-page-bottom {
  text-align: center;
}

#next {
  float: right;
  font-size: 1.25rem;
  font-weight: bold;
  width: 100%;
}

#previous {
  float: left;
  font-size: 1.25rem;
  font-weight: bold;
  width: 100%;
}

.languages-link {
  font-size: 2rem;
  font-weight: bold;
}

// ------ Footer styling below ------
footer {
  position: absolute;
  width: 100%;
  height: 60px;
  text-align: center;
  color: white;
  background-color: #1495d5;
  font-size: 1rem;
  padding-top: 20px;
  bottom: -60px;
}

